# Simulator-STM32

./: CMakeLists.txt  README.md
core/: main.c
core/include/: cpu_state.h  execute.h  gpio.h  memory.h  memory_map.h
core/src/: cpu_state.c  execute.c  gpio.c  memory.c
docs/periphery/: GPIO.md  Interrupts.md  TIM6.md
test/: test_gpio.c  test_simulator.c
